--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.16.5",
+    "@clerk/nextjs": "^6.22.0",
+    "@clerk/themes": "^2.2.50",
     "@prisma/client": "^6.10.0",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
