fix: update analytics integration and add Google Analytics support

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "@clerk/localizations": "^3.16.5",
     "@clerk/nextjs": "^6.22.0",
     "@clerk/themes": "^2.2.50",
+    "@next/third-parties": "^15.4.1",
     "@prisma/client": "^6.10.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
-    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.18.1",
